--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 	<head>
-		<title>Your Page Title</title>
+		<title>Likhon Sheikh</title>
 		<meta http-equiv="REFRESH" content="0;urlhttps://gitprofile-1gcibe.stackblitz.io/">
 	</head>
 	<body>
-		Optional page text here.
+		PLEASE WAIT.
 	</body>
 </html>
