--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
-<html>
-	<head>
-		<title>Likhon Sheikh</title>
-		<meta http-equiv="REFRESH" content="0;urlhttps://gitprofile-1gcibe.stackblitz.io/">
-	</head>
-	<body>
-		PLEASE WAIT.
-	</body>
-</html>
+<script>
+  window.location.href = "https://gitprofile-1gcibe.stackblitz.io/";
+</script>
